proyecto frontend + backend completo

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,14 @@
-SECRET_KEY=mysecretkey
-JWT_SECRET_KEY=myjwtsecret
+# Base de datos
+POSTGRES_USER=appuser
+POSTGRES_PASSWORD=apppass
+POSTGRES_DB=appdb
+
+# Flask
+FLASK_ENV=development
+SECRET_KEY=dev-secret
+
+# URL de conexión que usará Flask/SQLAlchemy
+DATABASE_URL=postgresql+psycopg2://appuser:apppass@db:5432/appdb
+
+# CORS (frontend local)
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
