--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,32 @@
 version: "3.9"
 
 services:
+  db:
+    image: postgres:16
+    container_name: app-postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   backend:
     build: .
+    container_name: app-backend
+    restart: unless-stopped
+    env_file: .env
+    depends_on:
+      - db
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
-    env_file:
-      - .env
+      # opcional: monta solo tu código si querés hot-reload
+      # - .:/app
+      - ./instance:/app/instance
+
+volumes:
+  pgdata:
