--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,5 @@
-Flask==3.1.2
-Flask-Cors==6.0.1
-Flask-SQLAlchemy==3.1.1
-python-dotenv==1.1.1
-colorama==0.4.6
-SQLAlchemy==2.0.20
-Werkzeug==3.1.2
-requests==2.31.0    
+Flask>=3.0
+Flask-Cors
+Flask-SQLAlchemy>=3.0
+python-dotenv
+flask-jwt-extended
